<resources>
    <string name="app_name">PETREW</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_value">Invalid value</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="bar_records">Records</string>
    <string name="bar_sd">Smart Devices</string>
    <string name="bar_grafts">Grafts</string>
    <string name="bar_diseases">Diseases</string>
    <string name="bar_country">Country</string>
    <string name="bar_settings">Settings</string>
    <string name="bar_statistic">Statistic</string>
    <string name="bar_add_animal">Add animal</string>
    <string name="add_animal_name">Name</string>
    <string name="add_animal_weight">Weight </string>
    <string name="add_animal_height">Height </string>
    <string name="add_animal_length">Length </string>
    <string name="add_animal_breed">Breed</string>
    <string name="add_animal_male">Male</string>
    <string name="add_animal_female">Female</string>
    <string name="add_animal_choose_date_of_birth">Choose date of birth</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="check">Check</string>
    <string name="settings_current_country">Current country </string>
    <string name="settings_select_country">Select country</string>
    <string name="update">UPDATE</string>
    <string name="settings_update_all_profile_data">UPDATE ALL PROFILE DATA</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="animal_name">Name </string>
    <string name="animal_gender">Gender </string>
    <string name="animal_smart_card_id">Smart card id </string>
    <string name="animal_breed">Animal Breed </string>
    <string name="animal_birth_date">Birth date </string>
    <string name="animal_height">Height </string>
    <string name="animal_weight">Weight </string>
    <string name="animal_length">Length </string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select_disease">Select disease</string>
    <string name="choose_date_of_start">Choose date of start</string>
    <string name="choose_date_of_end">Choose date of end</string>
    <string name="treatment">Treatment</string>
    <string name="choose_graft">Choose graft</string>
    <string name="choose_date_of_graft">Choose date of graft</string>
    <string name="name">Name</string>
    <string name="mac">Mac</string>
    <string name="battery_level">Battery Level</string>
    <string name="weight">Weight </string>
    <string name="height">Height </string>
    <string name="length">Length </string>

    <string name="are_you_sure">Are you sure?</string>
    <string name="one_way">Won\'t be able to recover this record!</string>
    <string name="delete_agreement">Yes,delete it!</string>

    <string name="error_add_animal">Cannot add animal, try later</string>
    <string name="error_delete_animal">Cannot delete animal, try later</string>

    <string name="error_delete_disease">Cannot delete disease, try later</string>
    <string name="error_delete_graft">Cannot delete graft, try later</string>
    <string name="error_delete_record">Cannot delete record, try later</string>
    <string name="error_delete_sd">Cannot delete smart device, try later</string>

    <string name="error_get_animal">Cannot get animal, try later</string>
    <string name="error_update_animal">Cannot update animal, try later</string>
    <string name="error_saving">Error while saving, try later!</string>
    <string name="error_load_user_data">Cannot load user\'s data, try later</string>
    <string name="error_update_animal_list">Cannot update animal list, try later</string>
    <string name="error_update_aprofile">Cannot update profile, try later</string>
    <string name="alert_updaated">Updated!</string>
    <string name="alert_suc_updaated">Successfully updated!</string>
    <string name="alert_suc_deleted">Successfully deleted!</string>

    <string name="alert_suc_deleted_disease">"Disease was deleted!"</string>
    <string name="alert_suc_deleted_graft">"Graft was deleted!"</string>
    <string name="alert_suc_deleted_record">"Record was deleted!"</string>
    <string name="alert_suc_deleted_sd">"Smart device was deleted!"</string>

    <string name="country_ok">Yes you can</string>
    <string name="country_no_info">No info</string>
    <string name="country_no_info_full">We can\'t say you about this country</string>
    <string name="country_no">No</string>
    <string name="country_no_grafts">No you can\'t! You need to make such grafts as:</string>
    <string name="bad_request">Bad request</string>
    <string name="add_disease">Add disease</string>
    <string name="add_graft">Add graft</string>
    <string name="add_sd">Add smart device</string>
    <string name="count_in_country">Count in country</string>
    <string name="check_country">Check country</string>
    <string name="update_animal">Update Animal</string>
    <string name="settings">Settings</string>
    <string name="invalid_number_params">Invalid number params</string>
    <string name="error_invalid_data">Invalid data</string>
    <string name="error_auth_failed">AUTH FAILED</string>
    <string name="current_country">Current country: </string>
    <string name="animal_state">STATE: </string>
    <string name="longitude">Longitude: </string>
    <string name="liatitude">Latitude: </string>
    <string name="pulse">Pulse: </string>
    <string name="temperature">Temperature: </string>
    <string name="warning">Warning</string>
    <string name="higherTemperature">Higher temperature</string>
    <string name="higherPulse">Higher pulse</string>
    <string name="please_focus_on_qr">Please focus on QR</string>
    <string name="go_to_scanner">Go to scanner</string>
    <string name="smart_card_reader">Smart card reader</string>
    <string name="smart_card_info">Smart card info</string>
    <string name="qr">QR</string>
</resources>
