<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/save_settings"
        android:orderInCategory="2"
        android:title="@string/bar_statistic"
        android:icon="@drawable/ic_statistics_black_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/update_settings"
        android:orderInCategory="3"
        android:title="@string/update"
        android:icon="@drawable/ic_loop"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/qr"
        android:orderInCategory="4"
        android:title="@string/qr"
        android:icon="@drawable/qr"
        app:showAsAction="ifRoom"/>
</menu>