<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingActivity">

    <ScrollView
        android:id="@+id/add_animal_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/add_animal_linear_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_country"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_current_country"/>

            <TextView
                android:id="@+id/animal_breed_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="10dp"
                android:text="@string/settings_select_country"
                android:textColor="#a3a3a3"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/countries"
                android:layout_width="match_parent"
                android:layout_height="37dp" />

            <Button
                android:id="@+id/submit"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="updateProfile"
                android:text="@string/update"
                android:textStyle="bold" />

            <Button
                android:id="@+id/submit_all"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="updateCacheData"
                android:text="@string/settings_update_all_profile_data"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sign_out"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="signOut"
                android:text="@string/sign_out"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:backgroundTint="@color/delete"
                />

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>